--- a/week1task1/task.html
+++ b/week1task1/task.html
@@ -9,12 +9,14 @@
 </head>
 
 <body>
+
     <h2>JavaScript time!</h2>
 
-    <button type="button" onclick="document.getElementById('demo').innerHTML = Date()">
-        Whats the time javascript?</button>
+    <button type="button" onclick="document.getElementById('time').innerHTML = Date()">Whats the time
+        javascript?</button>
 
-    <p id="demo"></p>
+    <p id="time"></p>
+
 </body>
 
 </html>
