--- a/week6task2/task2.html
+++ b/week6task2/task2.html
@@ -19,14 +19,14 @@
         let count = 0;
 
         while (count < 5) {
-            console.count("Counting up... Im at");
+            console.log("Counting up... Im at:" + count);
             count += 1;
         }
 
         console.log("Woah mum i counted to 5!")
 
         while (count < 9) {
-            console.count("Counting up... Im at");
+            console.log("Counting up... Im at:" + count);
             count += 1;
         }
 
