--- a/todo/todo.html
+++ b/todo/todo.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript To Do!</title>
+    <link rel="stylesheet" href="todo.css">
 </head>
+
 <body>
-    
+    <div class="addtolist">
+        <input type="string" id="field" name="field" value="New item..." class="inputfield">
+        <button id="addbutton" class="addbutton">Add</button>
+    </div>
+
+    <div class="list" id="list">
+
+
+
+    </div>
+
+
+    <script type="text/javascript">
+        let addbutton = document.getElementById("addbutton");
+        let field = document.getElementById("field");
+        let list = document.getElementById("list");
+
+
+
+    </script>
+
 </body>
+
 </html>
