--- a/todo/todo.html
+++ b/todo/todo.html
@@ -34,6 +34,10 @@
             elements.appendChild(myNewElement);
             myNewElement.style.backgroundColor = "#f7f5f5";
             myNewElement.style.fontSize = "20px";
+            myNewElement.style.marginBottom = "10px";
+            myNewElement.style.borderRadius = "5px";
+            myNewElement.style.height = "40px";
+            myNewElement.style.padding = "25px 20px 10px 20px";
 
             myNewElement.onmouseover = function () {
                 myNewElement.style.backgroundColor = "darkgrey";
