--- a/todo/todo_et3.html
+++ b/todo/todo_et3.html
@@ -51,7 +51,7 @@
             }
 
             myNewElement.onclick = function () {
-                elements.removeChild(myNewElement);
+                elements.style.text = "line-through";
             }
 
             clrButton.onclick = function () {
