--- a/cookieclicker/cookie.html
+++ b/cookieclicker/cookie.html
@@ -28,7 +28,7 @@
     </div>
 
     <div id="upgrades">
-        <h1>Upgrades</h1>
+        <h1>Upgrades:</h1>
         <img src="mousepointer.png" id="pointerImage">
         <figcaption id="pointerValue">Upgrade Value: 10 Cookies</figcaption>
         <div id="upgradesPurchased">
