--- a/cookieclicker/cookie.html
+++ b/cookieclicker/cookie.html
@@ -62,7 +62,7 @@
                 let newdiv = document.createElement("div");
                 upgradePurchased.appendChild(newdiv);
                 upgradesPurchased.innerHTML += "Purchased Level " + upgradeCounter++;
-                console.log(newdiv);
+                console.log(upgradesPurchased);
 
 
                 setInterval(function () {
